# ccase

./: .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix  justfile
src/: ;  app.rs  case_extension.rs  lib.rs  main.rs
