[package]
name = "ccase"
version = "0.3.0"
authors = ["Rutrum <dave@rutrum.net>"]
edition = "2021"
description = "Command line interface to convert strings into any case"
license = "MIT"
keywords = [ "casing", "case", "string" ]
categories = [ "text-processing", "command-line-utilities" ]
readme = "README.md"
repository = "https://github.com/rutrum/ccase"
documentation = "https://github.com/rutrum/ccase"

[[bin]]
name = "ccase"
path = "src/main.rs"

[dependencies]
convert_case = { version = "0.6", features = ["random"] }
clap = { version = "^4.0", features = ["cargo"] }
atty = "0.2.14"

[dev-dependencies]
predicates = "2.1.1"
assert_cmd = "2.0.4"
# strum = "0.18.0"
# strum_macros = "0.18.0"
